<resources>
    <string name="app_name">Homework</string>
    <string name="simpleMethodText">Обычный метод:</string>
    <string name="inputTextHereText">Введи текст сюда</string>
    <string name="rxJavaMethodText">Метод с RxJava:</string>
    <string name="choseJpgImage">Выбери изображение JPG</string>
    <string name="pngImageText">Изображение PNG</string>
    <string name="convertBtnText">КОНВЕРТИРОВАТЬ</string>
    <string name="selectFileToUploadText">Выбери файл для загрузки</string>
    <string name="input_user_name">Input user name</string>
    <string name="get">GET</string>
    <string name="user_name">User Name</string>
</resources>
