<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lesson_4.presentation.GitHubRepoActivity">

    <TextView
        android:id="@+id/putUsernameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        />
    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/input_user_name"
        app:layout_constraintStart_toStartOf="@id/putUsernameTextView"
        app:layout_constraintTop_toBottomOf="@id/putUsernameTextView"
        />
    <Button
        android:id="@+id/getReposBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/userNameEditText"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_git_hub_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="@id/getReposBtn"
        app:layout_constraintTop_toBottomOf="@id/getReposBtn"
        tools:itemCount="4"
        tools:listitem="@layout/item_git_hub_repo"/>

</androidx.constraintlayout.widget.ConstraintLayout>