<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson_3.Lesson3MainActivity">
    <TextView
        android:id="@+id/choseJpgImageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/choseJpgImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/choseJpgImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/choseJpgImageTextView"
        app:layout_constraintStart_toStartOf="@id/choseJpgImageTextView"/>
    <TextView
        android:id="@+id/pngTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pngImageText"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/choseJpgImageView"
        app:layout_constraintStart_toStartOf="@id/choseJpgImageView"/>
    <ImageView
        android:id="@+id/pngImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/pngTextView"
        app:layout_constraintStart_toStartOf="@id/pngTextView"/>
    <Button
        android:id="@+id/convertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertBtnText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/pngImageView"
        app:layout_constraintStart_toStartOf="@id/pngImageView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>