<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson_2.MainActivity">

    <TextView
        android:id="@+id/simpleMethodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpleMethodText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextHereText"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/simpleMethodTextView"
        app:layout_constraintStart_toStartOf="@id/simpleMethodTextView"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintStart_toStartOf="@id/editText"/>
    <TextView
        android:id="@+id/rxJavaMethodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rxJavaMethodText"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"/>
    <EditText
        android:id="@+id/editTextRx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextHereText"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/rxJavaMethodTextView"
        app:layout_constraintStart_toStartOf="@id/rxJavaMethodTextView"/>
    <TextView
        android:id="@+id/textViewRx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/editTextRx"
        app:layout_constraintStart_toStartOf="@id/editTextRx"/>
</androidx.constraintlayout.widget.ConstraintLayout>